welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:45: error: too many arguments for method getCouleurSol: ()java.awt.Color
	getCouleurSol(c)
                     ^