welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
partie();
partie();
partie();

}


def partie(){
	 carre();
 for (k<-1 to 5 ){
 avance();
  }
  carre();
  for (k<-1 to 5 ){
 avance();
  }
  carre();
  for (k<-1 to 4 ) {
  	avance();
  }
  droite();
  droite();
  for (k<-1 to 14 ) {
  	avance();
  }
  droite();
  for (k<-1 to  5){
  	avance();
  }
  droite();
}


 def carre() {
	faireV(Color.YELLOW);
	faireV(Color.RED);
	faireV(Color.BLUE);
	faireV(Color.GREEN);
}

def faireV(c:Color) {
	avance();
	getCouleurSol(c)
	baisseBrosse();
	leveBrosse();
	gauche();
	avance();
	droite();
	avance();
	baisseBrosse();
	leveBrosse();
	droite();
	avance();
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
}




